com/compilador/NParser.info
-----------------------------------------------------------------------------
Info file generated by Happy Version 2.0.2 from NParser.y
-----------------------------------------------------------------------------


-----------------------------------------------------------------------------
Grammar
-----------------------------------------------------------------------------
	%start_parse -> Programa                           (0)
	Programa -> ListaFuncoes BlocoPrincipal            (1)
	Programa -> BlocoPrincipal                         (2)
	ListaFuncoes -> ListaFuncoes Funcao                (3)
	ListaFuncoes -> Funcao                             (4)
	Funcao -> TipoRetorno identifier "(" DeclParametros ")" BlocoPrincipal   (5)
	Funcao -> TipoRetorno identifier "(" ")" BlocoPrincipal   (6)
	TipoRetorno -> Tipo                                (7)
	TipoRetorno -> "void"                              (8)
	DeclParametros -> DeclParametros "," Parametro     (9)
	DeclParametros -> Parametro                        (10)
	Parametro -> Tipo identifier                       (11)
	BlocoPrincipal -> "{" Declaracoes ListaCmd "}"     (12)
	BlocoPrincipal -> "{" ListaCmd "}"                 (13)
	Declaracoes -> Declaracoes Declaracao              (14)
	Declaracoes -> Declaracao                          (15)
	Declaracao -> Tipo ListaId ";"                     (16)
	Tipo -> "int"                                      (17)
	Tipo -> "double"                                   (18)
	Tipo -> "string"                                   (19)
	ListaId -> ListaId "," identifier                  (20)
	ListaId -> identifier                              (21)
	Bloco -> "{" ListaCmd "}"                          (22)
	ListaCmd -> ListaCmd Comando                       (23)
	ListaCmd -> Comando                                (24)
	Comando -> CmdSe                                   (25)
	Comando -> CmdEnquanto                             (26)
	Comando -> CmdAtrib                                (27)
	Comando -> CmdEscrita                              (28)
	Comando -> CmdLeitura                              (29)
	Comando -> ChamadaProc                             (30)
	Comando -> Retorno                                 (31)
	Retorno -> "return" ExprA ";"                      (32)
	Retorno -> "return" stringLit ";"                  (33)
	Retorno -> "return" ";"                            (34)
	CmdSe -> "if" "(" ExprL ")" Bloco                  (35)
	CmdSe -> "if" "(" ExprL ")" Bloco "else" Bloco     (36)
	CmdEnquanto -> "while" "(" ExprL ")" Bloco         (37)
	CmdAtrib -> identifier "=" ExprA ";"               (38)
	CmdAtrib -> identifier "=" stringLit ";"           (39)
	CmdEscrita -> "print" "(" ExprA ")" ";"            (40)
	CmdEscrita -> "print" "(" stringLit ")" ";"        (41)
	CmdLeitura -> "read" "(" identifier ")" ";"        (42)
	ChamadaProc -> ChamadaFuncao ";"                   (43)
	ChamadaFuncao -> identifier "(" ListaParametros ")"   (44)
	ChamadaFuncao -> identifier "(" ")"                (45)
	ListaParametros -> ExprA "," ListaParametros       (46)
	ListaParametros -> stringLit "," ListaParametros   (47)
	ListaParametros -> ExprA                           (48)
	ExprA -> Term                                      (49)
	ExprA -> ExprA "+" Term                            (50)
	ExprA -> ExprA "-" Term                            (51)
	Term -> Factor                                     (52)
	Term -> Term "*" Factor                            (53)
	Term -> Term "/" Factor                            (54)
	Factor -> "(" ExprA ")"                            (55)
	Factor -> identifier                               (56)
	Factor -> intConst                                 (57)
	Factor -> doubleConst                              (58)
	Factor -> "(" "int" ")" Factor                     (59)
	ExprR -> ExprA "<" ExprA                           (60)
	ExprR -> ExprA ">" ExprA                           (61)
	ExprR -> ExprA "<=" ExprA                          (62)
	ExprR -> ExprA ">=" ExprA                          (63)
	ExprR -> ExprA "==" ExprA                          (64)
	ExprR -> ExprA "/=" ExprA                          (65)
	ExprR -> ExprA                                     (66)
	ExprL -> ExprR                                     (67)
	ExprL -> ExprL "&&" ExprR                          (68)
	ExprL -> ExprL "||" ExprR                          (69)
	ExprL -> "!" ExprL                                 (70)

-----------------------------------------------------------------------------
Terminals
-----------------------------------------------------------------------------
	"int"          { TTipo TInt }
	"double"       { TTipo TDouble }
	"string"       { TTipo TString }
	"void"         { TTipo TVoid }
	"if"           { TIf }
	"else"         { TElse }
	"while"        { TWhile }
	"return"       { TReturn }
	"print"        { TPrint }
	"read"         { TRead }
	"{"            { TLChave }
	"}"            { TRChave }
	"("            { TLPar }
	")"            { TRPar }
	";"            { TSemi }
	","            { TComma }
	"+"            { TAdd }
	"-"            { TSub }
	"*"            { TMul }
	"/"            { TDiv }
	"="            { TAssign }
	"=="           { TEq }
	"/="           { TNotEq }
	"<"            { TLt }
	"<="           { TLte }
	">"            { TGt }
	">="           { TGte }
	"&&"           { TAnd }
	"||"           { TOr }
	"!"            { TNot }
	identifier     { TId $$ }
	intConst       { TCInt $$ }
	doubleConst    { TCDouble $$ }
	stringLit      { TLit $$ }

-----------------------------------------------------------------------------
Non-terminals
-----------------------------------------------------------------------------
	%start_parse    rule  0
	Programa        rules 1, 2
	ListaFuncoes    rules 3, 4
	Funcao          rules 5, 6
	TipoRetorno     rules 7, 8
	DeclParametros  rules 9, 10
	Parametro       rule  11
	BlocoPrincipal  rules 12, 13
	Declaracoes     rules 14, 15
	Declaracao      rule  16
	Tipo            rules 17, 18, 19
	ListaId         rules 20, 21
	Bloco           rule  22
	ListaCmd        rules 23, 24
	Comando         rules 25, 26, 27, 28, 29, 30, 31
	Retorno         rules 32, 33, 34
	CmdSe           rules 35, 36
	CmdEnquanto     rule  37
	CmdAtrib        rules 38, 39
	CmdEscrita      rules 40, 41
	CmdLeitura      rule  42
	ChamadaProc     rule  43
	ChamadaFuncao   rules 44, 45
	ListaParametros rules 46, 47, 48
	ExprA           rules 49, 50, 51
	Term            rules 52, 53, 54
	Factor          rules 55, 56, 57, 58, 59
	ExprR           rules 60, 61, 62, 63, 64, 65, 66
	ExprL           rules 67, 68, 69, 70

-----------------------------------------------------------------------------
States
-----------------------------------------------------------------------------
State 0

	%start_parse -> . Programa                          (rule 0)

	"int"          shift, and enter state 6
	"double"       shift, and enter state 7
	"string"       shift, and enter state 8
	"void"         shift, and enter state 9
	"{"            shift, and enter state 12

	Programa       goto state 10
	ListaFuncoes   goto state 2
	Funcao         goto state 3
	TipoRetorno    goto state 4
	BlocoPrincipal goto state 11
	Tipo           goto state 5

State 1

	Programa -> . ListaFuncoes BlocoPrincipal           (rule 1)

	"int"          shift, and enter state 6
	"double"       shift, and enter state 7
	"string"       shift, and enter state 8
	"void"         shift, and enter state 9

	ListaFuncoes   goto state 2
	Funcao         goto state 3
	TipoRetorno    goto state 4
	Tipo           goto state 5

State 2

	Programa -> ListaFuncoes . BlocoPrincipal           (rule 1)
	ListaFuncoes -> ListaFuncoes . Funcao               (rule 3)

	"int"          shift, and enter state 6
	"double"       shift, and enter state 7
	"string"       shift, and enter state 8
	"void"         shift, and enter state 9
	"{"            shift, and enter state 12

	Funcao         goto state 33
	TipoRetorno    goto state 4
	BlocoPrincipal goto state 34
	Tipo           goto state 5

State 3

	ListaFuncoes -> Funcao .                            (rule 4)

	"int"          reduce using rule 4
	"double"       reduce using rule 4
	"string"       reduce using rule 4
	"void"         reduce using rule 4
	"{"            reduce using rule 4


State 4

	Funcao -> TipoRetorno . identifier "(" DeclParametros ")" BlocoPrincipal    (rule 5)
	Funcao -> TipoRetorno . identifier "(" ")" BlocoPrincipal    (rule 6)

	identifier     shift, and enter state 32


State 5

	TipoRetorno -> Tipo .                               (rule 7)

	identifier     reduce using rule 7


State 6

	Tipo -> "int" .                                     (rule 17)

	identifier     reduce using rule 17


State 7

	Tipo -> "double" .                                  (rule 18)

	identifier     reduce using rule 18


State 8

	Tipo -> "string" .                                  (rule 19)

	identifier     reduce using rule 19


State 9

	TipoRetorno -> "void" .                             (rule 8)

	identifier     reduce using rule 8


State 10

	%start_parse -> Programa .                          (rule 0)

	%eof           accept


State 11

	Programa -> BlocoPrincipal .                        (rule 2)

	%eof           reduce using rule 2


State 12

	BlocoPrincipal -> "{" . Declaracoes ListaCmd "}"    (rule 12)
	BlocoPrincipal -> "{" . ListaCmd "}"                (rule 13)

	"int"          shift, and enter state 6
	"double"       shift, and enter state 7
	"string"       shift, and enter state 8
	"if"           shift, and enter state 26
	"while"        shift, and enter state 27
	"return"       shift, and enter state 28
	"print"        shift, and enter state 29
	"read"         shift, and enter state 30
	identifier     shift, and enter state 31

	Declaracoes    goto state 13
	Declaracao     goto state 14
	Tipo           goto state 15
	ListaCmd       goto state 16
	Comando        goto state 17
	Retorno        goto state 18
	CmdSe          goto state 19
	CmdEnquanto    goto state 20
	CmdAtrib       goto state 21
	CmdEscrita     goto state 22
	CmdLeitura     goto state 23
	ChamadaProc    goto state 24
	ChamadaFuncao  goto state 25

State 13

	BlocoPrincipal -> "{" Declaracoes . ListaCmd "}"    (rule 12)
	Declaracoes -> Declaracoes . Declaracao             (rule 14)

	"int"          shift, and enter state 6
	"double"       shift, and enter state 7
	"string"       shift, and enter state 8
	"if"           shift, and enter state 26
	"while"        shift, and enter state 27
	"return"       shift, and enter state 28
	"print"        shift, and enter state 29
	"read"         shift, and enter state 30
	identifier     shift, and enter state 31

	Declaracao     goto state 56
	Tipo           goto state 15
	ListaCmd       goto state 57
	Comando        goto state 17
	Retorno        goto state 18
	CmdSe          goto state 19
	CmdEnquanto    goto state 20
	CmdAtrib       goto state 21
	CmdEscrita     goto state 22
	CmdLeitura     goto state 23
	ChamadaProc    goto state 24
	ChamadaFuncao  goto state 25

State 14

	Declaracoes -> Declaracao .                         (rule 15)

	"int"          reduce using rule 15
	"double"       reduce using rule 15
	"string"       reduce using rule 15
	"if"           reduce using rule 15
	"while"        reduce using rule 15
	"return"       reduce using rule 15
	"print"        reduce using rule 15
	"read"         reduce using rule 15
	identifier     reduce using rule 15


State 15

	Declaracao -> Tipo . ListaId ";"                    (rule 16)

	identifier     shift, and enter state 55

	ListaId        goto state 54

State 16

	BlocoPrincipal -> "{" ListaCmd . "}"                (rule 13)
	ListaCmd -> ListaCmd . Comando                      (rule 23)

	"if"           shift, and enter state 26
	"while"        shift, and enter state 27
	"return"       shift, and enter state 28
	"print"        shift, and enter state 29
	"read"         shift, and enter state 30
	"}"            shift, and enter state 53
	identifier     shift, and enter state 31

	Comando        goto state 52
	Retorno        goto state 18
	CmdSe          goto state 19
	CmdEnquanto    goto state 20
	CmdAtrib       goto state 21
	CmdEscrita     goto state 22
	CmdLeitura     goto state 23
	ChamadaProc    goto state 24
	ChamadaFuncao  goto state 25

State 17

	ListaCmd -> Comando .                               (rule 24)

	"if"           reduce using rule 24
	"while"        reduce using rule 24
	"return"       reduce using rule 24
	"print"        reduce using rule 24
	"read"         reduce using rule 24
	"}"            reduce using rule 24
	identifier     reduce using rule 24


State 18

	Comando -> Retorno .                                (rule 31)

	"if"           reduce using rule 31
	"while"        reduce using rule 31
	"return"       reduce using rule 31
	"print"        reduce using rule 31
	"read"         reduce using rule 31
	"}"            reduce using rule 31
	identifier     reduce using rule 31


State 19

	Comando -> CmdSe .                                  (rule 25)

	"if"           reduce using rule 25
	"while"        reduce using rule 25
	"return"       reduce using rule 25
	"print"        reduce using rule 25
	"read"         reduce using rule 25
	"}"            reduce using rule 25
	identifier     reduce using rule 25


State 20

	Comando -> CmdEnquanto .                            (rule 26)

	"if"           reduce using rule 26
	"while"        reduce using rule 26
	"return"       reduce using rule 26
	"print"        reduce using rule 26
	"read"         reduce using rule 26
	"}"            reduce using rule 26
	identifier     reduce using rule 26


State 21

	Comando -> CmdAtrib .                               (rule 27)

	"if"           reduce using rule 27
	"while"        reduce using rule 27
	"return"       reduce using rule 27
	"print"        reduce using rule 27
	"read"         reduce using rule 27
	"}"            reduce using rule 27
	identifier     reduce using rule 27


State 22

	Comando -> CmdEscrita .                             (rule 28)

	"if"           reduce using rule 28
	"while"        reduce using rule 28
	"return"       reduce using rule 28
	"print"        reduce using rule 28
	"read"         reduce using rule 28
	"}"            reduce using rule 28
	identifier     reduce using rule 28


State 23

	Comando -> CmdLeitura .                             (rule 29)

	"if"           reduce using rule 29
	"while"        reduce using rule 29
	"return"       reduce using rule 29
	"print"        reduce using rule 29
	"read"         reduce using rule 29
	"}"            reduce using rule 29
	identifier     reduce using rule 29


State 24

	Comando -> ChamadaProc .                            (rule 30)

	"if"           reduce using rule 30
	"while"        reduce using rule 30
	"return"       reduce using rule 30
	"print"        reduce using rule 30
	"read"         reduce using rule 30
	"}"            reduce using rule 30
	identifier     reduce using rule 30


State 25

	ChamadaProc -> ChamadaFuncao . ";"                  (rule 43)

	";"            shift, and enter state 51


State 26

	CmdSe -> "if" . "(" ExprL ")" Bloco                 (rule 35)
	CmdSe -> "if" . "(" ExprL ")" Bloco "else" Bloco    (rule 36)

	"("            shift, and enter state 50


State 27

	CmdEnquanto -> "while" . "(" ExprL ")" Bloco        (rule 37)

	"("            shift, and enter state 49


State 28

	Retorno -> "return" . ExprA ";"                     (rule 32)
	Retorno -> "return" . stringLit ";"                 (rule 33)
	Retorno -> "return" . ";"                           (rule 34)

	"("            shift, and enter state 43
	";"            shift, and enter state 44
	identifier     shift, and enter state 45
	intConst       shift, and enter state 46
	doubleConst    shift, and enter state 47
	stringLit      shift, and enter state 48

	ExprA          goto state 40
	Term           goto state 41
	Factor         goto state 42

State 29

	CmdEscrita -> "print" . "(" ExprA ")" ";"           (rule 40)
	CmdEscrita -> "print" . "(" stringLit ")" ";"       (rule 41)

	"("            shift, and enter state 39


State 30

	CmdLeitura -> "read" . "(" identifier ")" ";"       (rule 42)

	"("            shift, and enter state 38


State 31

	CmdAtrib -> identifier . "=" ExprA ";"              (rule 38)
	CmdAtrib -> identifier . "=" stringLit ";"          (rule 39)
	ChamadaFuncao -> identifier . "(" ListaParametros ")"    (rule 44)
	ChamadaFuncao -> identifier . "(" ")"               (rule 45)

	"("            shift, and enter state 36
	"="            shift, and enter state 37


State 32

	Funcao -> TipoRetorno identifier . "(" DeclParametros ")" BlocoPrincipal    (rule 5)
	Funcao -> TipoRetorno identifier . "(" ")" BlocoPrincipal    (rule 6)

	"("            shift, and enter state 35


State 33

	ListaFuncoes -> ListaFuncoes Funcao .               (rule 3)

	"int"          reduce using rule 3
	"double"       reduce using rule 3
	"string"       reduce using rule 3
	"void"         reduce using rule 3
	"{"            reduce using rule 3


State 34

	Programa -> ListaFuncoes BlocoPrincipal .           (rule 1)

	%eof           reduce using rule 1


State 35

	Funcao -> TipoRetorno identifier "(" . DeclParametros ")" BlocoPrincipal    (rule 5)
	Funcao -> TipoRetorno identifier "(" . ")" BlocoPrincipal    (rule 6)

	"int"          shift, and enter state 6
	"double"       shift, and enter state 7
	"string"       shift, and enter state 8
	")"            shift, and enter state 86

	DeclParametros goto state 83
	Parametro      goto state 84
	Tipo           goto state 85

State 36

	ChamadaFuncao -> identifier "(" . ListaParametros ")"    (rule 44)
	ChamadaFuncao -> identifier "(" . ")"               (rule 45)

	"("            shift, and enter state 43
	")"            shift, and enter state 81
	identifier     shift, and enter state 45
	intConst       shift, and enter state 46
	doubleConst    shift, and enter state 47
	stringLit      shift, and enter state 82

	ListaParametrosgoto state 79
	ExprA          goto state 80
	Term           goto state 41
	Factor         goto state 42

State 37

	CmdAtrib -> identifier "=" . ExprA ";"              (rule 38)
	CmdAtrib -> identifier "=" . stringLit ";"          (rule 39)

	"("            shift, and enter state 43
	identifier     shift, and enter state 45
	intConst       shift, and enter state 46
	doubleConst    shift, and enter state 47
	stringLit      shift, and enter state 78

	ExprA          goto state 77
	Term           goto state 41
	Factor         goto state 42

State 38

	CmdLeitura -> "read" "(" . identifier ")" ";"       (rule 42)

	identifier     shift, and enter state 76


State 39

	CmdEscrita -> "print" "(" . ExprA ")" ";"           (rule 40)
	CmdEscrita -> "print" "(" . stringLit ")" ";"       (rule 41)

	"("            shift, and enter state 43
	identifier     shift, and enter state 45
	intConst       shift, and enter state 46
	doubleConst    shift, and enter state 47
	stringLit      shift, and enter state 75

	ExprA          goto state 74
	Term           goto state 41
	Factor         goto state 42

State 40

	Retorno -> "return" ExprA . ";"                     (rule 32)
	ExprA -> ExprA . "+" Term                           (rule 50)
	ExprA -> ExprA . "-" Term                           (rule 51)

	";"            shift, and enter state 71
	"+"            shift, and enter state 72
	"-"            shift, and enter state 73


State 41

	ExprA -> Term .                                     (rule 49)
	Term -> Term . "*" Factor                           (rule 53)
	Term -> Term . "/" Factor                           (rule 54)

	")"            reduce using rule 49
	";"            reduce using rule 49
	","            reduce using rule 49
	"+"            reduce using rule 49
	"-"            reduce using rule 49
	"*"            shift, and enter state 69
	"/"            shift, and enter state 70
	"=="           reduce using rule 49
	"/="           reduce using rule 49
	"<"            reduce using rule 49
	"<="           reduce using rule 49
	">"            reduce using rule 49
	">="           reduce using rule 49
	"&&"           reduce using rule 49
	"||"           reduce using rule 49


State 42

	Term -> Factor .                                    (rule 52)

	")"            reduce using rule 52
	";"            reduce using rule 52
	","            reduce using rule 52
	"+"            reduce using rule 52
	"-"            reduce using rule 52
	"*"            reduce using rule 52
	"/"            reduce using rule 52
	"=="           reduce using rule 52
	"/="           reduce using rule 52
	"<"            reduce using rule 52
	"<="           reduce using rule 52
	">"            reduce using rule 52
	">="           reduce using rule 52
	"&&"           reduce using rule 52
	"||"           reduce using rule 52


State 43

	Factor -> "(" . ExprA ")"                           (rule 55)
	Factor -> "(" . "int" ")" Factor                    (rule 59)

	"int"          shift, and enter state 68
	"("            shift, and enter state 43
	identifier     shift, and enter state 45
	intConst       shift, and enter state 46
	doubleConst    shift, and enter state 47

	ExprA          goto state 67
	Term           goto state 41
	Factor         goto state 42

State 44

	Retorno -> "return" ";" .                           (rule 34)

	"if"           reduce using rule 34
	"while"        reduce using rule 34
	"return"       reduce using rule 34
	"print"        reduce using rule 34
	"read"         reduce using rule 34
	"}"            reduce using rule 34
	identifier     reduce using rule 34


State 45

	Factor -> identifier .                              (rule 56)

	")"            reduce using rule 56
	";"            reduce using rule 56
	","            reduce using rule 56
	"+"            reduce using rule 56
	"-"            reduce using rule 56
	"*"            reduce using rule 56
	"/"            reduce using rule 56
	"=="           reduce using rule 56
	"/="           reduce using rule 56
	"<"            reduce using rule 56
	"<="           reduce using rule 56
	">"            reduce using rule 56
	">="           reduce using rule 56
	"&&"           reduce using rule 56
	"||"           reduce using rule 56


State 46

	Factor -> intConst .                                (rule 57)

	")"            reduce using rule 57
	";"            reduce using rule 57
	","            reduce using rule 57
	"+"            reduce using rule 57
	"-"            reduce using rule 57
	"*"            reduce using rule 57
	"/"            reduce using rule 57
	"=="           reduce using rule 57
	"/="           reduce using rule 57
	"<"            reduce using rule 57
	"<="           reduce using rule 57
	">"            reduce using rule 57
	">="           reduce using rule 57
	"&&"           reduce using rule 57
	"||"           reduce using rule 57


State 47

	Factor -> doubleConst .                             (rule 58)

	")"            reduce using rule 58
	";"            reduce using rule 58
	","            reduce using rule 58
	"+"            reduce using rule 58
	"-"            reduce using rule 58
	"*"            reduce using rule 58
	"/"            reduce using rule 58
	"=="           reduce using rule 58
	"/="           reduce using rule 58
	"<"            reduce using rule 58
	"<="           reduce using rule 58
	">"            reduce using rule 58
	">="           reduce using rule 58
	"&&"           reduce using rule 58
	"||"           reduce using rule 58


State 48

	Retorno -> "return" stringLit . ";"                 (rule 33)

	";"            shift, and enter state 66


State 49

	CmdEnquanto -> "while" "(" . ExprL ")" Bloco        (rule 37)

	"("            shift, and enter state 43
	"!"            shift, and enter state 64
	identifier     shift, and enter state 45
	intConst       shift, and enter state 46
	doubleConst    shift, and enter state 47

	ExprA          goto state 61
	Term           goto state 41
	Factor         goto state 42
	ExprR          goto state 62
	ExprL          goto state 65

State 50

	CmdSe -> "if" "(" . ExprL ")" Bloco                 (rule 35)
	CmdSe -> "if" "(" . ExprL ")" Bloco "else" Bloco    (rule 36)

	"("            shift, and enter state 43
	"!"            shift, and enter state 64
	identifier     shift, and enter state 45
	intConst       shift, and enter state 46
	doubleConst    shift, and enter state 47

	ExprA          goto state 61
	Term           goto state 41
	Factor         goto state 42
	ExprR          goto state 62
	ExprL          goto state 63

State 51

	ChamadaProc -> ChamadaFuncao ";" .                  (rule 43)

	"if"           reduce using rule 43
	"while"        reduce using rule 43
	"return"       reduce using rule 43
	"print"        reduce using rule 43
	"read"         reduce using rule 43
	"}"            reduce using rule 43
	identifier     reduce using rule 43


State 52

	ListaCmd -> ListaCmd Comando .                      (rule 23)

	"if"           reduce using rule 23
	"while"        reduce using rule 23
	"return"       reduce using rule 23
	"print"        reduce using rule 23
	"read"         reduce using rule 23
	"}"            reduce using rule 23
	identifier     reduce using rule 23


State 53

	BlocoPrincipal -> "{" ListaCmd "}" .                (rule 13)

	"int"          reduce using rule 13
	"double"       reduce using rule 13
	"string"       reduce using rule 13
	"void"         reduce using rule 13
	"{"            reduce using rule 13
	%eof           reduce using rule 13


State 54

	Declaracao -> Tipo ListaId . ";"                    (rule 16)
	ListaId -> ListaId . "," identifier                 (rule 20)

	";"            shift, and enter state 59
	","            shift, and enter state 60


State 55

	ListaId -> identifier .                             (rule 21)

	";"            reduce using rule 21
	","            reduce using rule 21


State 56

	Declaracoes -> Declaracoes Declaracao .             (rule 14)

	"int"          reduce using rule 14
	"double"       reduce using rule 14
	"string"       reduce using rule 14
	"if"           reduce using rule 14
	"while"        reduce using rule 14
	"return"       reduce using rule 14
	"print"        reduce using rule 14
	"read"         reduce using rule 14
	identifier     reduce using rule 14


State 57

	BlocoPrincipal -> "{" Declaracoes ListaCmd . "}"    (rule 12)
	ListaCmd -> ListaCmd . Comando                      (rule 23)

	"if"           shift, and enter state 26
	"while"        shift, and enter state 27
	"return"       shift, and enter state 28
	"print"        shift, and enter state 29
	"read"         shift, and enter state 30
	"}"            shift, and enter state 58
	identifier     shift, and enter state 31

	Comando        goto state 52
	Retorno        goto state 18
	CmdSe          goto state 19
	CmdEnquanto    goto state 20
	CmdAtrib       goto state 21
	CmdEscrita     goto state 22
	CmdLeitura     goto state 23
	ChamadaProc    goto state 24
	ChamadaFuncao  goto state 25

State 58

	BlocoPrincipal -> "{" Declaracoes ListaCmd "}" .    (rule 12)

	"int"          reduce using rule 12
	"double"       reduce using rule 12
	"string"       reduce using rule 12
	"void"         reduce using rule 12
	"{"            reduce using rule 12
	%eof           reduce using rule 12


State 59

	Declaracao -> Tipo ListaId ";" .                    (rule 16)

	"int"          reduce using rule 16
	"double"       reduce using rule 16
	"string"       reduce using rule 16
	"if"           reduce using rule 16
	"while"        reduce using rule 16
	"return"       reduce using rule 16
	"print"        reduce using rule 16
	"read"         reduce using rule 16
	identifier     reduce using rule 16


State 60

	ListaId -> ListaId "," . identifier                 (rule 20)

	identifier     shift, and enter state 116


State 61

	ExprA -> ExprA . "+" Term                           (rule 50)
	ExprA -> ExprA . "-" Term                           (rule 51)
	ExprR -> ExprA . "<" ExprA                          (rule 60)
	ExprR -> ExprA . ">" ExprA                          (rule 61)
	ExprR -> ExprA . "<=" ExprA                         (rule 62)
	ExprR -> ExprA . ">=" ExprA                         (rule 63)
	ExprR -> ExprA . "==" ExprA                         (rule 64)
	ExprR -> ExprA . "/=" ExprA                         (rule 65)
	ExprR -> ExprA .                                    (rule 66)

	")"            reduce using rule 66
	"+"            shift, and enter state 72
	"-"            shift, and enter state 73
	"=="           shift, and enter state 110
	"/="           shift, and enter state 111
	"<"            shift, and enter state 112
	"<="           shift, and enter state 113
	">"            shift, and enter state 114
	">="           shift, and enter state 115
	"&&"           reduce using rule 66
	"||"           reduce using rule 66


State 62

	ExprL -> ExprR .                                    (rule 67)

	")"            reduce using rule 67
	"&&"           reduce using rule 67
	"||"           reduce using rule 67


State 63

	CmdSe -> "if" "(" ExprL . ")" Bloco                 (rule 35)
	CmdSe -> "if" "(" ExprL . ")" Bloco "else" Bloco    (rule 36)
	ExprL -> ExprL . "&&" ExprR                         (rule 68)
	ExprL -> ExprL . "||" ExprR                         (rule 69)

	")"            shift, and enter state 109
	"&&"           shift, and enter state 106
	"||"           shift, and enter state 107


State 64

	ExprL -> "!" . ExprL                                (rule 70)

	"("            shift, and enter state 43
	"!"            shift, and enter state 64
	identifier     shift, and enter state 45
	intConst       shift, and enter state 46
	doubleConst    shift, and enter state 47

	ExprA          goto state 61
	Term           goto state 41
	Factor         goto state 42
	ExprR          goto state 62
	ExprL          goto state 108

State 65

	CmdEnquanto -> "while" "(" ExprL . ")" Bloco        (rule 37)
	ExprL -> ExprL . "&&" ExprR                         (rule 68)
	ExprL -> ExprL . "||" ExprR                         (rule 69)

	")"            shift, and enter state 105
	"&&"           shift, and enter state 106
	"||"           shift, and enter state 107


State 66

	Retorno -> "return" stringLit ";" .                 (rule 33)

	"if"           reduce using rule 33
	"while"        reduce using rule 33
	"return"       reduce using rule 33
	"print"        reduce using rule 33
	"read"         reduce using rule 33
	"}"            reduce using rule 33
	identifier     reduce using rule 33


State 67

	ExprA -> ExprA . "+" Term                           (rule 50)
	ExprA -> ExprA . "-" Term                           (rule 51)
	Factor -> "(" ExprA . ")"                           (rule 55)
